src/cn/edu/com/MyNewGrammar.java
/* Generated By:JJTree&JavaCC: Do not edit this line. MyNewGrammar.java */
package cn.edu.com;

import java.io.*;
import java.util.ArrayList;
import cn.edu.util.*;
import java.util.Stack;

public class MyNewGrammar/*@bgen(jjtree)*/implements MyNewGrammarTreeConstants, MyNewGrammarConstants {/*@bgen(jjtree)*/
  protected JJTMyNewGrammarState jjtree = new JJTMyNewGrammarState();static QTList qtList=new QTList();//四元式组
  static VariableTable VTB= new VariableTable();//符号表

  public static void main(String filename)
  {

        FileInputStream file;
        FileOutputStream result;


    try {
                  file = new FileInputStream(filename);
                  result = new FileOutputStream("src/tree.txt");
                   MyNewGrammar parser = new MyNewGrammar(file);
                   try {
                        SimpleNode rootNode = parser.Start();
                                rootNode.dump(" ",result);//抓取返回的语法树。
                } catch (Exception e) {
                        System.out.println(e.getMessage());
                 } catch (Error e) {
                        System.out.println(e.getMessage());
                 }

                 qtList.printQTTable();//打印四元式表
                 VTB.printVariableTable();//打印符号表
                 result.close();
        } catch (FileNotFoundException e1) {
                // TODO Auto-generated catch block
                e1.printStackTrace();
        } catch (IOException e) {
                        // TODO 自动生成的 catch 块
                        e.printStackTrace();
                }


        FileInputStream fileStream;
        FileOutputStream Binary;

    try {
                  fileStream = new FileInputStream(filename);
                  Binary = new FileOutputStream("src/binary.txt");
                  MyNewGrammar parser = new MyNewGrammar(fileStream);
                  Token token;
                  while(true) {
                              token=parser.getNextToken();
                          if(token!=null&& token.kind!=0) {
                                        Binary.write((token.kind+"\u005ct"+token.image+"\u005cn").getBytes());//保存二元式
                                                }
                                else {
                                  break;}
                                 }
                                  Binary.close();
        } catch (FileNotFoundException e1) {
                // TODO Auto-generated catch block
                e1.printStackTrace();
        } catch (IOException e) {
                        // TODO 自动生成的 catch 块
                        e.printStackTrace();
                }
        }

  final public SimpleNode Start() throws ParseException {
 /*@bgen(jjtree) Start */
  SimpleNode jjtn000 = new SimpleNode(JJTSTART);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      program();
      jj_consume_token(0);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

  final public void program() throws ParseException {
                 /*@bgen(jjtree) program */
  SimpleNode jjtn000 = new SimpleNode(JJTPROGRAM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INT:
        jj_consume_token(INT);
        break;
      case VOID:
        jj_consume_token(VOID);
        break;
      default:
        jj_la1[0] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(MAIN);
      jj_consume_token(LC);
      jj_consume_token(RC);
      jj_consume_token(LB);
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case RETURN:
        case INT:
        case DOUBLE:
        case FLOAT:
        case CHAR:
        case STRING:
        case IF:
        case SWITCH:
        case WHILE:
        case FOR:
        case DO:
        case IDENTIFIER:
        case LB:
        case SEMICOLON:
          ;
          break;
        default:
          jj_la1[1] = jj_gen;
          break label_1;
        }
        Statementblock();
      }
      jj_consume_token(RB);
    } catch (Throwable jjte000) {
   if (jjtc000) {
     jjtree.clearNodeScope(jjtn000);
     jjtc000 = false;
   } else {
     jjtree.popNode();
   }
   if (jjte000 instanceof RuntimeException) {
     {if (true) throw (RuntimeException)jjte000;}
   }
   if (jjte000 instanceof ParseException) {
     {if (true) throw (ParseException)jjte000;}
   }
   {if (true) throw (Error)jjte000;}
    } finally {
   if (jjtc000) {
     jjtree.closeNodeScope(jjtn000, true);
   }
    }
  }

  final public void Statementblock() throws ParseException {
                       /*@bgen(jjtree) Statementblock */
  SimpleNode jjtn000 = new SimpleNode(JJTSTATEMENTBLOCK);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case RETURN:
      case INT:
      case DOUBLE:
      case FLOAT:
      case CHAR:
      case STRING:
      case IF:
      case SWITCH:
      case WHILE:
      case FOR:
      case DO:
      case IDENTIFIER:
      case SEMICOLON:
        Statement();
        break;
      case LB:
        jj_consume_token(LB);
        label_2:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case RETURN:
          case INT:
          case DOUBLE:
          case FLOAT:
          case CHAR:
          case STRING:
          case IF:
          case SWITCH:
          case WHILE:
          case FOR:
          case DO:
          case IDENTIFIER:
          case LB:
          case SEMICOLON:
            ;
            break;
          default:
            jj_la1[2] = jj_gen;
            break label_2;
          }
          Statementblock();
        }
        jj_consume_token(RB);
        break;
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void Statement() throws ParseException {
                   /*@bgen(jjtree) Statement */
  SimpleNode jjtn000 = new SimpleNode(JJTSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INT:
      case DOUBLE:
      case FLOAT:
      case CHAR:
      case STRING:
      case IDENTIFIER:
      case SEMICOLON:
        SequenceStatement();
        break;
      case IF:
        Conditionalstatements();
        break;
      case WHILE:
      case FOR:
      case DO:
        loopstatement();
        break;
      case SWITCH:
        SwitchStatement();
        break;
      case RETURN:
        Return();
        break;
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
            if (jjtc000) {
              jjtree.clearNodeScope(jjtn000);
              jjtc000 = false;
            } else {
              jjtree.popNode();
            }
            if (jjte000 instanceof RuntimeException) {
              {if (true) throw (RuntimeException)jjte000;}
            }
            if (jjte000 instanceof ParseException) {
              {if (true) throw (ParseException)jjte000;}
            }
            {if (true) throw (Error)jjte000;}
    } finally {
            if (jjtc000) {
              jjtree.closeNodeScope(jjtn000, true);
            }
    }
  }

  final public void SequenceStatement() throws ParseException {
                           /*@bgen(jjtree) SequenceStatement */
  SimpleNode jjtn000 = new SimpleNode(JJTSEQUENCESTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INT:
      case DOUBLE:
      case FLOAT:
      case CHAR:
      case STRING:
      case IDENTIFIER:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case INT:
        case DOUBLE:
        case FLOAT:
        case CHAR:
        case STRING:
          statement();
          break;
        case IDENTIFIER:
          assignment();
          break;
        default:
          jj_la1[5] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      default:
        jj_la1[6] = jj_gen;
        ;
      }
      jj_consume_token(SEMICOLON);
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void statement() throws ParseException {
 /*@bgen(jjtree) statement */
  SimpleNode jjtn000 = new SimpleNode(JJTSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token first = null;
Token middle=null;
String type;
    try {
      type = type();
      first = jj_consume_token(IDENTIFIER);
         VTB.addVariable(new Variable(type,first.image,first.endLine,first.endColumn));
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ASSIGN:
        jj_consume_token(ASSIGN);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case INTEGER_LITERAL:
          middle = jj_consume_token(INTEGER_LITERAL);
          break;
        case FLOAT_LITERAL:
          middle = jj_consume_token(FLOAT_LITERAL);
          break;
        default:
          jj_la1[7] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        qtList.addQTInfo(new QTInfo("=",middle.image,"_",first.image));
        break;
      default:
        jj_la1[8] = jj_gen;
        ;
      }
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[9] = jj_gen;
          break label_3;
        }
        jj_consume_token(COMMA);
        first = jj_consume_token(IDENTIFIER);
     VTB.addVariable(new Variable(type,first.image,first.endLine,first.endColumn));
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ASSIGN:
          jj_consume_token(ASSIGN);
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case INTEGER_LITERAL:
            middle = jj_consume_token(INTEGER_LITERAL);
            break;
          case FLOAT_LITERAL:
            middle = jj_consume_token(FLOAT_LITERAL);
            break;
          default:
            jj_la1[10] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        qtList.addQTInfo(new QTInfo("=",middle.image,"_",first.image));
          break;
        default:
          jj_la1[11] = jj_gen;
          ;
        }
      }
    } catch (Throwable jjte000) {
   if (jjtc000) {
     jjtree.clearNodeScope(jjtn000);
     jjtc000 = false;
   } else {
     jjtree.popNode();
   }
   if (jjte000 instanceof RuntimeException) {
     {if (true) throw (RuntimeException)jjte000;}
   }
   if (jjte000 instanceof ParseException) {
     {if (true) throw (ParseException)jjte000;}
   }
   {if (true) throw (Error)jjte000;}
    } finally {
   if (jjtc000) {
     jjtree.closeNodeScope(jjtn000, true);
   }
    }
  }

  final public void assignment() throws ParseException {
  /*@bgen(jjtree) assignment */
  SimpleNode jjtn000 = new SimpleNode(JJTASSIGNMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token first = null;
 String middle = null;
    try {
      first = jj_consume_token(IDENTIFIER);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ADDONE:
      case MINUTEONE:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ADDONE:
          jj_consume_token(ADDONE);
          break;
        case MINUTEONE:
          jj_consume_token(MINUTEONE);
          break;
        default:
          jj_la1[12] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      default:
        jj_la1[13] = jj_gen;
        ;
      }
      jj_consume_token(ASSIGN);
      middle = Expression();
                qtList.addQTInfo(new QTInfo("=",middle,"_",first.image));
                VTB.assignmentJudge(first.image);
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[14] = jj_gen;
          break label_4;
        }
        jj_consume_token(COMMA);
        first = jj_consume_token(IDENTIFIER);
        jj_consume_token(ASSIGN);
        middle = Expression();
        qtList.addQTInfo(new QTInfo("=",middle,"_",first.image));
        VTB.assignmentJudge(first.image);
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void Conditionalstatements() throws ParseException {
 /*@bgen(jjtree) Conditionalstatements */
 SimpleNode jjtn000 = new SimpleNode(JJTCONDITIONALSTATEMENTS);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);ConditionValue value;
QTInfo qt = null;
    try {
      jj_consume_token(IF);
      jj_consume_token(LC);
      value = Logiccondition();
    value.backpatchTrueChain(QTInfo.size+1);
      jj_consume_token(RC);
      Statementblock();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ELSE:
        jj_consume_token(ELSE);
     qt=new QTInfo("J","_","_","T");
        qtList.addQTInfo(qt);
        value.backpatchFalseChain(QTInfo.size+1);
        Statementblock();
        break;
      default:
        jj_la1[15] = jj_gen;
        ;
      }
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
         if(qt==null)
                value.backpatchFalseChain(QTInfo.size+1);
         else
                qt.setResult(QTInfo.size+1);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public ConditionValue Logiccondition() throws ParseException {
 /*@bgen(jjtree) Logiccondition */
 SimpleNode jjtn000 = new SimpleNode(JJTLOGICCONDITION);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);ConditionValue value1,value2;
String op=null;
    try {
      value1 = Condition();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AND:
      case OR:
        op = Logic();
           if(op=="&&") {value1.backpatchTrueChain(QTInfo.size+1); }
                 else if(op=="||") { value1.backpatchFalseChain(QTInfo.size+1);}
        value2 = Logiccondition();
      if(op=="&&") {value2.mergeFalse(value1); }
        else if(op=="||") { value2.mergeTrue(value1);}
                {if (true) return value2;}
        break;
      default:
        jj_la1[16] = jj_gen;
        ;
      }
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
          {if (true) return value1;}
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

  final public ConditionValue Condition() throws ParseException {
 /*@bgen(jjtree) Condition */
 SimpleNode jjtn000 = new SimpleNode(JJTCONDITION);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);String first=null,middle=null,op=null;
ConditionValue value=new ConditionValue();
    try {
      first = Expression();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LT:
      case LE:
      case GT:
      case GE:
      case EQ:
      case NE:
        op = Relationship();
        middle = Expression();
        break;
      default:
        jj_la1[17] = jj_gen;
        ;
      }
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    if (op != null)
    {
      QTInfo qt = new QTInfo("J" + op, first, middle, "T");
      qtList.addQTInfo(qt);
      value.mergeTrue(qt);
    }
    else
    {
      QTInfo qt = new QTInfo("Jnz", first, "_", "T");
      qtList.addQTInfo(qt);
      value.mergeTrue(qt);
    }
    QTInfo qt = new QTInfo("J", "_", "_", "F");
    qtList.addQTInfo(qt);
    value.mergeFalse(qt);
    {if (true) return value;}
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }
